updated crud item

--- a/views/admin/category/edit_modal.ejs
+++ b/views/admin/category/edit_modal.ejs
@@ -29,6 +29,7 @@
               class="form-control name"
               name="name"
               id="name"
+              required
             />
           </div>
         </div>
