--- a/views/admin/bank/add_modal.ejs
+++ b/views/admin/bank/add_modal.ejs
@@ -10,7 +10,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Add Category</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Add Bank</h5>
         <button
           type="button"
           class="close"
@@ -20,17 +20,41 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form action="/admin/category" method="POST">
+      <form action="/admin/bank" method="POST" enctype="multipart/form-data">
         <div class="modal-body">
+          <div class="form-group">
+            <label for="name">Bank Name</label>
+            <input
+              type="text"
+              class="form-control"
+              name="bankName"
+              placeholder="Nama Bank"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="name">Nomor Rekening</label>
+            <input
+              type="text"
+              class="form-control"
+              name="nomorRekening"
+              placeholder="Masukkan Nomor Rekening"
+              required
+            />
+          </div>
           <div class="form-group">
             <label for="name">Name</label>
             <input
               type="text"
               class="form-control"
               name="name"
-              id="name"
+              placeholder="Name"
               required
             />
+          </div>
+          <div class="form-group">
+            <label for="name">Image</label>
+            <input type="file" class="form-control" name="image" required />
           </div>
         </div>
         <div class="modal-footer">
