--- a/views/admin/bank/view_bank.ejs
+++ b/views/admin/bank/view_bank.ejs
@@ -11,6 +11,7 @@
 
       <!-- Begin Page Content -->
       <div class="container-fluid">
+        <%- include('../../partials/message.ejs') %>
         <!-- Page Heading -->
         <h1 class="h3 mb-4 text-gray-800">Bank</h1>
 
@@ -69,4 +70,21 @@
   </div>
 </div>
 
-<%- include('../../partials/js.ejs') %>
+<%- include('add_modal.ejs') %> <%- include('edit_modal.ejs') %>
+<%-include('../../partials/js.ejs') %>
+
+<script>
+  $('#dataTable').on('click', '.button-update', function () {
+    let id = $(this).data('id');
+    let name = $(this).data('name');
+    let bankName = $(this).data('bankname');
+    let nomorRekening = $(this).data('nomorrekening');
+
+    $('#edit-modal').modal('show');
+
+    $('.id').val(id);
+    $('.name').val(name);
+    $('.bankName').val(bankName);
+    $('.nomorRekening').val(nomorRekening);
+  });
+</script>
