--- a/views/admin/item/view_item.ejs
+++ b/views/admin/item/view_item.ejs
@@ -11,11 +11,41 @@
 
       <!-- Begin Page Content -->
       <div class="container-fluid">
+        <%- include('../../partials/message.ejs') %>
         <!-- Page Heading -->
         <h1 class="h3 mb-4 text-gray-800">Item</h1>
 
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <a
+              class="nav-link active"
+              id="home-tab"
+              data-toggle="tab"
+              href="#show-item"
+              role="tab"
+              aria-controls="home"
+              aria-selected="true"
+              >Show Item</a
+            >
+          </li>
+          <li class="nav-item" role="presentation">
+            <a
+              class="nav-link"
+              id="profile-tab"
+              data-toggle="tab"
+              href="#add-item"
+              role="tab"
+              aria-controls="profile"
+              aria-selected="false"
+              >Add Item</a
+            >
+          </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+          <%- include('show_table_item.ejs') %> <%- include('add_item.ejs') %>
+        </div>
         <!-- Start Table -->
-        <%- include('table_item.ejs') %>
+
         <!-- End of Table -->
       </div>
     </div>
@@ -70,3 +100,6 @@
 </div>
 
 <%- include('../../partials/js.ejs') %>
+<script>
+  CKEDITOR.replace('about');
+</script>
