--- a/views/admin/item/detail_item/view_detail_item.ejs
+++ b/views/admin/item/detail_item/view_detail_item.ejs
@@ -1,32 +1,31 @@
-<%- include('../../partials/header.ejs') %>
+<%- include('../../../partials/header.ejs') %>
 <!-- Page Wrapper -->
 <div id="wrapper">
-  <%- include('../../partials/sidebar.ejs') %>
+  <%- include('../../../partials/sidebar.ejs') %>
 
   <!-- Content Wrapper -->
   <div id="content-wrapper" class="d-flex flex-column">
     <!-- Main Content -->
     <div id="content">
-      <%- include('../../partials/navbar.ejs') %>
+      <%- include('../../../partials/navbar.ejs') %>
 
       <!-- Begin Page Content -->
       <div class="container-fluid">
-        <%- include('../../partials/message.ejs') %>
+        <%- include('../../../partials/message.ejs') %>
         <!-- Page Heading -->
         <h1 class="h3 mb-4 text-gray-800">Item</h1>
 
-        <% if (action == 'view') { %>
         <ul class="nav nav-tabs" id="myTab" role="tablist">
           <li class="nav-item" role="presentation">
             <a
               class="nav-link active"
               id="home-tab"
               data-toggle="tab"
-              href="#show-item"
+              href="#show-feature"
               role="tab"
               aria-controls="home"
               aria-selected="true"
-              >Show Item</a
+              >Show Feature</a
             >
           </li>
           <li class="nav-item" role="presentation">
@@ -34,55 +33,16 @@
               class="nav-link"
               id="profile-tab"
               data-toggle="tab"
-              href="#add-item"
+              href="#show-activity"
               role="tab"
               aria-controls="profile"
               aria-selected="false"
-              >Add Item</a
+              >Show Activity</a
             >
           </li>
         </ul>
-        <div class="tab-content" id="myTabContent">
-          <%- include('show_table_item.ejs') %> <%- include('add_item.ejs') %>
-        </div>
+        <div class="tab-content" id="myTabContent"></div>
 
-        <% } else if(action == 'show image') { %>
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <a
-              class="nav-link active"
-              id="home-tab"
-              data-toggle="tab"
-              href="#show-image"
-              role="tab"
-              aria-controls="home"
-              aria-selected="true"
-              >Show Image</a
-            >
-          </li>
-        </ul>
-        <div class="tab-content" id="myTabContent">
-          <%- include('show_image_item.ejs') %>
-        </div>
-        <% } else { %>
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <a
-              class="nav-link active"
-              id="home-tab"
-              data-toggle="tab"
-              href="#edit-item"
-              role="tab"
-              aria-controls="home"
-              aria-selected="true"
-              >Edit Item</a
-            >
-          </li>
-        </ul>
-        <div class="tab-content" id="myTabContent">
-          <%- include('edit_item.ejs') %>
-        </div>
-        <% } %>
         <!-- Start Table -->
 
         <!-- End of Table -->
@@ -91,7 +51,7 @@
     <!-- End of Main Content -->
 
     <!-- Footer -->
-    <%- include('../../partials/footer.ejs') %>
+    <%- include('../../../partials/footer.ejs') %>
     <!-- End Of Footer -->
   </div>
   <!-- End of Content Wrapper -->
@@ -138,7 +98,7 @@
   </div>
 </div>
 
-<%- include('../../partials/js.ejs') %>
+<%- include('../../../partials/js.ejs') %>
 <script>
   CKEDITOR.replace('about');
 </script>
