--- a/views/admin/item/detail_item/view_detail_item.ejs
+++ b/views/admin/item/detail_item/view_detail_item.ejs
@@ -13,7 +13,7 @@
       <div class="container-fluid">
         <%- include('../../../partials/message.ejs') %>
         <!-- Page Heading -->
-        <h1 class="h3 mb-4 text-gray-800">Item</h1>
+        <h1 class="h3 mb-4 text-gray-800">Detail Item</h1>
 
         <ul class="nav nav-tabs" id="myTab" role="tablist">
           <li class="nav-item" role="presentation">
@@ -41,7 +41,9 @@
             >
           </li>
         </ul>
-        <div class="tab-content" id="myTabContent"></div>
+        <div class="tab-content" id="myTabContent">
+          <%- include('show_feature.ejs') %> <%- include('show_activity.ejs') %>
+        </div>
 
         <!-- Start Table -->
 
@@ -97,8 +99,36 @@
     </div>
   </div>
 </div>
-
+<%- include('show_modal_activity.ejs') %>
+<!-- activity -->
+<%- include('show_modal_Feature.ejs') %>
+<!-- js -->
 <%- include('../../../partials/js.ejs') %>
+
 <script>
+  $(document).ready(function () {
+    $('#dataTableActivity').DataTable();
+  });
   CKEDITOR.replace('about');
+  $('#dataTableActivity').on('click', '.button-update', function () {
+    let id = $(this).data('id');
+    let name = $(this).data('name');
+    let type = $(this).data('type');
+    $('#edit-modal').modal('show');
+
+    $('.id').val(id);
+    $('.name').val(name);
+    $('.type').val(type);
+  });
+
+  $('#dataTable').on('click', '.button-update', function () {
+    let id = $(this).data('id');
+    let name = $(this).data('name');
+    let qty = $(this).data('qty');
+    $('#edit-modal').modal('show');
+
+    $('.id').val(id);
+    $('.name').val(name);
+    $('.qty').val(qty);
+  });
 </script>
