finalizing all API

--- a/views/admin/booking/show_detail_booking.ejs
+++ b/views/admin/booking/show_detail_booking.ejs
@@ -11,13 +11,10 @@
 
       <!-- Begin Page Content -->
       <div class="container-fluid">
-        <%- include('../../partials/message.ejs') %>
         <!-- Page Heading -->
-        <h1 class="h3 mb-4 text-gray-800">Booking Page</h1>
+        <h1 class="h3 mb-4 text-gray-800">Detail Booking Page</h1>
 
-        <!-- Start Table -->
-        <%- include('table_booking.ejs') %>
-        <!-- End of Table -->
+        <%- include('show_table_detail_booking.ejs') %>
       </div>
     </div>
     <!-- End of Main Content -->
