--- a/views/admin/item/show_image_item.ejs
+++ b/views/admin/item/show_image_item.ejs
@@ -12,9 +12,9 @@
         <div class="card-body">
           <div class="table-responsive">
             <img
-              src="http://localhost:3000/<%= item.imageId[x].imageUrl %> "
+              src="http://localhost:3000/<%= item.imageId[x].imageUrl %>"
               alt="images"
-              style="width: 100%; display: block;"
+              style="width: 100%; display: block"
             />
           </div>
         </div>
