--- a/views/admin/booking/show_table_detail_booking.ejs
+++ b/views/admin/booking/show_table_detail_booking.ejs
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-md-4">
         <img
-          src="http://localhost:3000/<%= booking.payments.proofPayment %>"
+          src="https://admin-serverstaycation.herokuapp.com/<%= booking.payments.proofPayment %>"
           alt="images"
           style="width: 100%; display: block"
         />
