--- a/views/admin/item/detail_item/show_activity.ejs
+++ b/views/admin/item/detail_item/show_activity.ejs
@@ -66,7 +66,7 @@
                   <td><%= activity[i].type %></td>
                   <td>
                     <img
-                      src="http://localhost:3000<%= activity[i].imageUrl %> "
+                      src="https://admin-serverstaycation.herokuapp.com/<%= activity[i].imageUrl %> "
                       alt="imageUrl"
                       width="20px"
                     />
